[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["koutaro-masaki <koutaro.masaki@glucose.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
SQLAlchemy = "^1.4.7"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^3.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
